# clerica

./: .cursorrules  .gitignore  CLAUDE.md  README.md  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
.storybook/: main.ts  preview.ts  storybook-fix.css
.storybook/mocks/: IconButtonWrapper.svelte  MockIcon.svelte  tauri.ts
config/: exif_tags.yaml
project_docs/: performance_improvements.md  plan.md  requirements.md
renderer/: index.html  styles.css
src/: app.html  index.css  main.ts  preload.ts  renderer.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data_migrations/: 001_initial_data.sql  002_add_performance_indexes.sql
src-tauri/migrations/: 001_initial.sql  002_add_metadata_fields.sql  003_add_last_accessed.sql  004_add_custom_metadata_keys.sql  005_add_metadata_json.sql  006_add_settings.sql  007_add_files_per_page_setting.sql  008_add_performance_indexes.sql  009_add_performace_indexes2.sql  010_rename_groups_to_shelves.sql
src-tauri/settings_migrations/: 001_initial_settings.sql  011_create_shelf_tables.sql  012_add_exclusion_patterns.sql
src-tauri/src/: custom_metadata.rs  database.rs  database_backup.rs  database_manager.rs  database_old.rs  exclusion_patterns.rs  exif_config.rs  file_manager.rs  file_manager_backup.rs  group_commands.rs  group_manager.rs  main.rs  search.rs  search_backup.rs  settings.rs  shelf_commands.rs  shelf_manager.rs  thumbnail.rs  watcher.rs  watcher.rs.bak
src-tauri/src/database/: mod.rs
src-tauri/src/exif_constants/: color_space_values.rs  enhancement_values.rs  light_source_values.rs  metering_mode_values.rs  mod.rs  orientation_values.rs  scene_capture_type_values.rs  subject_distance_range_values.rs  tag_names.rs  white_balance_values.rs
src-tauri/src/file_manager/: directories.rs  files.rs  mod.rs  tags.rs  tests.rs  tests.rs.bak  types.rs
src-tauri/src/search/: mod.rs  tests.rs
src/lib/: App.css  api.test.ts  api.ts  types.ts  utils.test.ts  utils.ts
src/lib/api/: directories.ts  exclusionPatterns.ts  exif.ts  files.ts  groups.ts  index.ts  metadata.ts  search.ts  settings.ts  shelves.ts  tags.ts  types.ts
src/lib/components/: BatchRenameModal.svelte  CustomMetadataEditor.svelte  CustomMetadataKeyManager.svelte  DeleteConfirmDialog.svelte  Dropdown.svelte  ExclusionPatternsManager.svelte  FileCategoryFilters.svelte  FileDetailModal.svelte  FileItemDisplay.svelte  FileList.svelte  FileRenameModal.svelte  FilesView.svelte  GroupManager.svelte  LanguageSwitcher.svelte  LoadingScreen.svelte  Pagination.svelte  RenameHelp.svelte  SearchView.svelte  SettingsModal.svelte  ShelfManager.svelte  Sidebar.svelte  SimpleLoadingScreen.svelte  Snackbar.svelte  SortControl.svelte  TagInput.svelte  TagsView.svelte
src/lib/i18n/: index.ts
src/lib/services/: SettingsService.ts
src/lib/stores/: common.ts  error.ts  files.ts  tags.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/stories/: Button.stories.ts  Checkbox.stories.ts  DateInput.stories.ts  Dropdown.stories.ts  IconButton.stories.ts  NumberInput.stories.ts  Pagination.stories.ts  RadioButtonGroup.stories.ts  RadioButtonGroupWrapper.svelte  Select.stories.ts  Snackbar.stories.ts  SnackbarStorybook.svelte  SnackbarWrapper.svelte  SortControl.stories.ts  TagInput.stories.ts  TextInput.stories.ts  Textarea.stories.ts
src/test/: integration.test.ts  page.test.ts  setup.ts
tests/e2e/: app.spec.ts  file-management.spec.ts  tag-management.spec.ts
(+66 files in other folders)
