[package]
name = "clerica"
version = "0.1.0"
description = "Mac向けファイル整理・検索ツール"
authors = ["naokirin"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "8.0"
walkdir = "2.4"
tauri = "2"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0"
# alternatively with Git
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"] 