[package]
name = "clerica"
version = "0.1.0"
description = "Mac向けファイル整理・検索ツール"
authors = ["naokirin"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "8.0"
walkdir = "2.4"
exif = { package = "kamadak-exif", version = "0.5" }
lofty = "0.21"
tauri = { version = "2", features = ["protocol-asset"] }
md5 = "0.7"
regex = "1.0"
thiserror = "1.0"
tera = "1.19"
zip = "2.2"
# sevenz-rust = "0.6"  # 7zサポートは一時的に無効化
unrar = "0.5"
tar = "0.4"
flate2 = "1.0"

[dev-dependencies]
mockall = "0.13"
tempfile = "3.8"
tokio-test = "0.4"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0"
# alternatively with Git
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"

[dependencies.tauri-plugin-dialog]
version = "2.0.0"
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v2"


[build-dependencies]
tauri-build = { version = "2", features = [] }
sqlx = { version = "0.8", features = ["migrate"] }

[features]
custom-protocol = ["tauri/custom-protocol"] 
